2005-09-27  Per Abrahamsen  <abraham@dina.kvl.dk>

	* parser_file.C (load_derived): Special support for Number objects.

	* weather_std.C: Handle missing timestep better (I hope).

	* units.C (standard_conversions): [g CO2-C/cm^2] -> [CO2/m^2]
	(multiply): [g CO_2-C/cm^3/h] * [cm] = [g CO_2-C/cm^2/h]
	* lib/log.dai ("Crop Photosynthesis"): Use spec.
	* production.C (RootRespiration): Fixed dimension.

	* number_arit.C: New model.
	* source_expr.C: New model.
	* Makefile (MODELS): Added them.
	
2005-09-26  Per Abrahamsen  <abraham@dina.kvl.dk>

	* source_std.C: New model.
	* source.C, source.h: Made it a component.
	* Makefile (COMPONENTS, MODELS): Added it.
	(SUBMODELS): Removed it.

	* parser.h (class Parser): explicit.

	* parser_file.C: Use ostringstream instead of TmpStream.

	* Version 3.82 released.

2005-09-22  Per Abrahamsen  <abraham@dina.kvl.dk>

	* source.C, source.h: New submodel.
	* Makefile (SUBMODELS): Added it.

	* Version 3.81 released.

2005-09-22  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 3.80 released.

2005-09-21  Per Abrahamsen  <abraham@dina.kvl.dk>

	* format_LaTeX.h: New interface.
	* Makefile (MODELS): Removed.
	(SPECIALS): Added.

2005-09-20  Per Abrahamsen  <abraham@dina.kvl.dk>

	* action_crop.C: Use ostringstream instead of TmpStream.
	* action_fertilize.C: Ditto.
	* action_irrigate.C: Ditto.
	* action_markvand.C: Ditto.
	* action_wait.C: Ditto.
	* am.C: Ditto.
	* assertion.C: Ditto.
	* bioclimate_std.C: Ditto.
	* check_range.C: Ditto.

	* check_range.C: Don't use namespace std.

	* alist.h, alist.C (name_sequence): New accessor.

2005-09-06  Per Abrahamsen  <abraham@dina.kvl.dk>

	* txt/Makefile (exercises.pdf): Depfix.

	* Version 3.79 released.

2005-09-06  Per Abrahamsen  <abraham@dina.kvl.dk>

	* log_harvest.C: Moved water and N stress last.

2005-08-30  Per Abrahamsen  <abraham@dina.kvl.dk>

	* condition_soil.C (soil_inorganic_N_above): New condition.

2005-08-26  Per Abrahamsen  <abraham@dina.kvl.dk>
